# meshtastic-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  config.yaml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  contributing.md  development.md  installation.md  introduction.md  usage.md
docs/src/commands/: channel.md  completions.md  config-file.md  config.md  device.md  gpio.md  messaging.md  mqtt-bridge.md  network.md  node.md  position.md  request.md  shell.md  watch.md  waypoint.md
src/: cli.rs  config_file.rs  connection.rs  error.rs  main.rs  node_db.rs  node_db_builder.rs  router.rs
src/commands/: admin.rs  channel.rs  config.rs  config_file_cmd.rs  destination.rs  device.rs  export_import.rs  gpio.rs  info.rs  listen.rs  mod.rs  mqtt_bridge.rs  node.rs  nodes.rs  parsers.rs  ping.rs  position.rs  reply.rs  request.rs  send.rs  shell.rs  support.rs  traceroute.rs  watch.rs  waypoint.rs
src/commands/config/: field_mapper.rs  mod.rs  printer.rs  serializer.rs
