[package]
name = "meshtastic-cli"
version = "0.3.0"
edition = "2021"
description = "A CLI tool for interacting with Meshtastic mesh networking devices"
license = "MIT"

[features]
default = []
ble = ["meshtastic/bluetooth-le"]

[dependencies]
meshtastic = "0.1.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
colored = "3"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
qrcode = "0.14"
image = "0.25"
