[package]
name = "meshtastic-cli"
version = "0.4.0"
edition = "2021"
description = "A CLI tool for interacting with Meshtastic mesh networking devices"
license = "MIT"
authors = ["matutetandil"]
repository = "https://github.com/matutetandil/meshtastic-cli"
homepage = "https://matutetandil.github.io/meshtastic-cli"
documentation = "https://matutetandil.github.io/meshtastic-cli"
readme = "README.md"
keywords = ["meshtastic", "mesh", "lora", "cli", "iot"]
categories = ["command-line-utilities", "network-programming"]

[features]
default = []
ble = ["meshtastic/bluetooth-le"]

[dependencies]
meshtastic = "0.1.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
colored = "3"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
qrcode = "0.14"
image = "0.25"
clap_complete = "4"
serde_json = "1"
toml = "0.8"
dirs = "6"
crossterm = "0.28"
rumqttc = "0.24"
rustyline = "15"
shlex = "1"
